--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.teamgannon.trips</groupId>
     <artifactId>trips</artifactId>
-    <version>0.3</version>
+    <version>v0.4</version>
 
     <name>Terran Republic Interstellar Plotter</name>
     <description>
