--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -210,13 +210,6 @@
             <version>3.0.2</version>
         </dependency>
 
-        <!-- Hipster graph search algorithms -->
-<!--        <dependency>-->
-<!--            <groupId>es.usc.citius.hipster</groupId>-->
-<!--            <artifactId>hipster-all</artifactId>-->
-<!--            <version>1.0.1</version>-->
-<!--        </dependency>-->
-
         <!-- file loaders and exporters -->
         <!-- csvfile parser -->
         <dependency>
@@ -224,12 +217,6 @@
             <artifactId>opencsv</artifactId>
             <version>${opencsv.version}</version>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>org.ujmp</groupId>-->
-<!--            <artifactId>ujmp-core</artifactId>-->
-<!--            <version>0.3.0</version>-->
-<!--        </dependency>-->
 
         <!-- Java FX support -->
         <dependency>
@@ -268,6 +255,13 @@
             <groupId>net.rgielen</groupId>
             <artifactId>javafx-weaver-spring-boot-starter</artifactId>
             <version>${fxweaver.version}</version>
+        </dependency>
+
+        <!-- Graph library -->
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.5.0</version>
         </dependency>
 
         <dependency>
