--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -108,7 +108,7 @@
         <commons.math.version>3.6.1</commons.math.version>
         <commons-codec.version>1.14</commons-codec.version>
 
-        <org.jgrapht.core.version>1.0.1</org.jgrapht.core.version>
+        <org.jgrapht.core.version>1.5.0</org.jgrapht.core.version>
         <org.jgrapht.ext.version>1.0.1</org.jgrapht.ext.version>
 
         <controlsfx.version>11.0.2</controlsfx.version>
@@ -261,6 +261,18 @@
         <dependency>
             <groupId>org.jgrapht</groupId>
             <artifactId>jgrapht-core</artifactId>
+            <version>${org.jgrapht.core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-ext</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-io</artifactId>
             <version>1.5.0</version>
         </dependency>
 
