--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -7,13 +7,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.3.RELEASE</version>
+        <version>2.3.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.teamgannon.trips</groupId>
     <artifactId>trips</artifactId>
-    <version>v0.5.7</version>
+    <version>0.5.7</version>
 
     <name>Terran Republic Interstellar Plotter</name>
     <description>
@@ -243,6 +243,26 @@
             <version>${javafx.version}</version>
         </dependency>
 
+        <!-- FXyz libraries -->
+        <dependency>
+            <groupId>org.fxyz3d</groupId>
+            <artifactId>fxyz3d</artifactId>
+            <version>0.5.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.fxyz3d</groupId>
+            <artifactId>fxyz3d-client</artifactId>
+            <version>0.5.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.fxyz3d</groupId>
+            <artifactId>fxyz3d-importers</artifactId>
+            <version>0.5.2</version>
+        </dependency>
+
+
         <!-- Java FX support third party -->
         <!-- Java FX Weaver dependencies -->
         <dependency>
@@ -287,6 +307,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
