--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -220,9 +220,9 @@
 
         <!-- Java FX support -->
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.0.2</version>
         </dependency>
 
         <dependency>
