--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -147,6 +147,12 @@
             <version>2.11.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+            <version>4.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Various apache commons libraries -->
         <!-- Apache Commons Collections4 -->
         <dependency>
