--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -95,10 +95,10 @@
         <maven.compiler.target>15</maven.compiler.target>
         <maven.compiler.source>15</maven.compiler.source>
 
-        <javafx.version>14</javafx.version>
+        <javafx.version>16</javafx.version>
         <fxweaver.version>1.3.0</fxweaver.version>
 
-        <lombok.version>1.18.16</lombok.version>
+        <lombok.version>1.18.18</lombok.version>
 
         <commons.collections4.version>4.4</commons.collections4.version>
         <commons.io.version>2.6</commons.io.version>
@@ -106,16 +106,23 @@
         <commons.math.version>3.6.1</commons.math.version>
         <commons-codec.version>1.14</commons-codec.version>
 
+        <orekit.version>10.3</orekit.version>
+
+        <jackson-databind.version>2.11.3</jackson-databind.version>
+
+        <jsr305.version>3.0.2</jsr305.version>
+        <javax-validation.version>2.0.1.Final</javax-validation.version>
+
         <org.jgrapht.core.version>1.5.0</org.jgrapht.core.version>
         <org.jgrapht.ext.version>1.0.1</org.jgrapht.ext.version>
 
-        <controlsfx.version>11.0.2</controlsfx.version>
+        <controlsfx.version>11.1.0</controlsfx.version>
+        <fxyz3d.version>0.5.2</fxyz3d.version>
 
-        <kxml2.version>2.3.0</kxml2.version>
-        <jsofa.version>20160729</jsofa.version>
-        <orekit.version>8.0</orekit.version>
-        <opencsv.version>5.2</opencsv.version>
         <poi.ooxml.version>4.1.2</poi.ooxml.version>
+        <xlsx-streamer.version>2.1.0</xlsx-streamer.version>
+
+        <jsqlparser.version>4.0-SNAPSHOT</jsqlparser.version>
     </properties>
 
     <dependencyManagement>
@@ -155,14 +162,14 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.11.3</version>
+            <version>${jackson-databind.version}</version>
         </dependency>
 
         <!-- SQL parsing support -->
         <dependency>
             <groupId>com.github.jsqlparser</groupId>
             <artifactId>jsqlparser</artifactId>
-            <version>4.0-SNAPSHOT</version>
+            <version>${jsqlparser.version}</version>
         </dependency>
 
         <!-- Various apache commons libraries -->
@@ -210,7 +217,7 @@
         <dependency>
             <groupId>com.monitorjbl</groupId>
             <artifactId>xlsx-streamer</artifactId>
-            <version>2.1.0</version>
+            <version>${xlsx-streamer.version}</version>
         </dependency>
 
         <!-- icon libraries -->
@@ -233,20 +240,20 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
+            <version>${javax-validation.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
-            <version>3.0.2</version>
+            <version>${jsr305.version}</version>
         </dependency>
 
         <!-- Java FX support -->
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.0.2</version>
+            <version>${controlsfx.version}</version>
         </dependency>
 
         <dependency>
@@ -271,7 +278,7 @@
         <dependency>
             <groupId>org.fxyz3d</groupId>
             <artifactId>fxyz3d</artifactId>
-            <version>0.5.2</version>
+            <version>${fxyz3d.version}</version>
         </dependency>
 
         <!-- Java FX support third party -->
@@ -298,20 +305,20 @@
         <dependency>
             <groupId>org.jgrapht</groupId>
             <artifactId>jgrapht-ext</artifactId>
-            <version>1.5.0</version>
+            <version>${org.jgrapht.core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.jgrapht</groupId>
             <artifactId>jgrapht-io</artifactId>
-            <version>1.5.0</version>
+            <version>${org.jgrapht.core.version}</version>
         </dependency>
 
         <!-- orbital dynamics and math libraries -->
         <dependency>
             <groupId>org.orekit</groupId>
             <artifactId>orekit</artifactId>
-            <version>10.3</version>
+            <version>${orekit.version}</version>
         </dependency>
 
         <!-- Apache Commons Math -->
