--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.2</version>
+        <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -41,7 +41,7 @@
 
         <contributor>
             <name>Charles Gannon</name>
-            <email>TBD</email>
+            <email>contact@charlesegannon.com</email>
             <url>http://www.charlesegannon.com</url>
             <organization>Charles Gannon</organization>
             <organizationUrl>http://www.charlesegannon.com</organizationUrl>
@@ -95,7 +95,7 @@
         <maven.compiler.target>15</maven.compiler.target>
         <maven.compiler.source>15</maven.compiler.source>
 
-        <javafx.version>15</javafx.version>
+        <javafx.version>16</javafx.version>
         <fxweaver.version>1.3.0</fxweaver.version>
 
         <lombok.version>1.18.20</lombok.version>
@@ -104,11 +104,11 @@
         <commons.io.version>2.6</commons.io.version>
         <commons.lang.version>2.6</commons.lang.version>
         <commons.math.version>3.6.1</commons.math.version>
-        <commons-codec.version>1.14</commons-codec.version>
+        <commons-codec.version>20041127.091804</commons-codec.version>
 
-        <orekit.version>10.3</orekit.version>
+        <orekit.version>10.3.1</orekit.version>
 
-        <jackson-databind.version>2.12.3</jackson-databind.version>
+        <jackson-databind.version>2.12.4</jackson-databind.version>
 
         <jsr305.version>3.0.2</jsr305.version>
         <javax-validation.version>2.0.1.Final</javax-validation.version>
@@ -121,7 +121,7 @@
         <poi.ooxml.version>5.0.0</poi.ooxml.version>
         <xlsx-streamer.version>2.2.0</xlsx-streamer.version>
 
-        <jsqlparser.version>4.0-SNAPSHOT</jsqlparser.version>
+        <jsqlparser.version>4.1</jsqlparser.version>
     </properties>
 
     <dependencyManagement>
@@ -360,14 +360,14 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>22.0.0</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>2.8.7</version>
         </dependency>
 
         <dependency>
