--- a/tripsapplication/src/main/resources/application.yml
+++ b/tripsapplication/src/main/resources/application.yml
@@ -36,3 +36,4 @@ app:
   projectPage: https://github.com/ljramones/trips
   fileDirectory: files
   programdata: files/programdata/
+  scriptDirectory: files/scriptfiles/
