--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -96,6 +96,8 @@
 
         <lombok.version>1.18.20</lombok.version>
 
+        <groovy.version>3.0.9</groovy.version>
+
         <commons.collections4.version>4.4</commons.collections4.version>
         <commons.io.version>2.6</commons.io.version>
         <commons.lang.version>2.6</commons.lang.version>
@@ -194,6 +196,19 @@
             <groupId>com.github.jsqlparser</groupId>
             <artifactId>jsqlparser</artifactId>
             <version>${jsqlparser.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython-standalone</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy.version}</version>
+            <type>pom</type>
         </dependency>
 
         <!-- Various apache commons libraries -->
