--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -205,6 +205,31 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.axis</groupId>
+            <artifactId>axis</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml</groupId>
+            <artifactId>jaxrpc</artifactId>
+            <version>1.1</version>
+        </dependency>
+
+        <!-- University of Bristol JCDF -->
+        <dependency>
+            <groupId>uk.ac.starlink</groupId>
+            <artifactId>jcdf</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>gov.nasa.gsfc.heasarc</groupId>
+            <artifactId>nom-tam-fits</artifactId>
+            <version>1.16.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
@@ -236,7 +261,7 @@
         <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
-            <version>5.5.2</version>
+            <version>5.6</version>
         </dependency>
 
         <!-- toxic libs dependencies -->
@@ -249,6 +274,12 @@
         <dependency>
             <groupId>toxi</groupId>
             <artifactId>physics</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>Acme</groupId>
+            <artifactId>acme</artifactId>
             <version>1.0.0</version>
         </dependency>
 
@@ -268,7 +299,7 @@
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
-            <version>6.1.2</version>
+            <version>6.1.3</version>
         </dependency>
 
         <dependency>
