--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -89,7 +89,7 @@
         <maven.compiler.source>17</maven.compiler.source>
 
         <camel.version>3.13.0</camel.version>
-        <spring.boot.version>2.7.3</spring.boot.version>
+        <spring.boot.version>2.7.4</spring.boot.version>
 
         <javafx.version>17.0.1</javafx.version>
         <fxweaver.version>1.3.0</fxweaver.version>
@@ -199,6 +199,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>2.14.0-rc1</version>
         </dependency>
 
         <!-- SQL parsing support -->
@@ -271,7 +272,7 @@
         <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
-            <version>5.6</version>
+            <version>5.7.0</version>
         </dependency>
 
         <!-- toxic libs dependencies -->
