--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
         </license>
     </licenses>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17.0.1</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+    </properties>
+
     <modules>
         <module>tripsapplication</module>
         <!--        <module>install</module>-->
