--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -94,7 +94,7 @@
         <javafx.version>17.0.1</javafx.version>
         <fxweaver.version>1.3.0</fxweaver.version>
 
-        <lombok.version>1.18.20</lombok.version>
+        <lombok.version>1.18.30</lombok.version>
 
         <groovy.version>4.0.4</groovy.version>
 
@@ -194,6 +194,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
