removed PreferencesUpdaterListener.java listener from code

--- a/tripsapplication/src/main/resources/application.yml
+++ b/tripsapplication/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   application:
     ui:
       title: Terran Republic Interstellar Plotting System (TRIPS)
+  aop:
+      proxy-target-class: true
 
   # spring datasource requirements
   datasource:
@@ -28,17 +30,6 @@ spring:
     init:
       continue-on-error: true
 
-server:
-  servlet:
-    context-path=/employee-management:logging:
-  level:
-    reactor:
-      netty:
-        http:
-          client:
-            HttpClient=DEBUG:
-    org:
-      springframework=DEBUG:
 app:
   title: Terran Republic Interstellar Plotting System (TRIPS)
   version: v0.8.0
