--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -91,10 +91,10 @@
         <camel.version>3.13.0</camel.version>
         <spring.boot.version>2.7.4</spring.boot.version>
 
-        <javafx.version>17.0.1</javafx.version>
+        <javafx.version>21.0.5</javafx.version>
         <fxweaver.version>1.3.0</fxweaver.version>
 
-        <lombok.version>1.18.30</lombok.version>
+        <lombok.version>1.18.34</lombok.version>
 
         <groovy.version>4.0.4</groovy.version>
 
@@ -194,7 +194,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -498,6 +498,25 @@
 
     <build>
         <plugins>
+            <!-- Maven Compiler Plugin with Lombok annotation processing -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <release>17</release>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
             <!-- generate the jaxb classes from xsd s -->
             <plugin>
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
