--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -494,6 +494,13 @@
             </exclusions>
         </dependency>
 
+        <!-- Required for mockStatic support -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
