--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -92,7 +92,7 @@
         <spring.boot.version>2.7.4</spring.boot.version>
 
         <javafx.version>21.0.5</javafx.version>
-        <fxweaver.version>1.3.0</fxweaver.version>
+        <fxweaver.version>2.0.1</fxweaver.version>
 
         <lombok.version>1.18.34</lombok.version>
 
@@ -451,9 +451,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>2.15.1</version>
         </dependency>
 
         <dependency>
