--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -204,10 +204,18 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- H2 database support -->
+        <!-- Override transitive Guava from jzy3d to fix CVE-2023-2976 and CVE-2020-8908 -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.0.0-jre</version>
+        </dependency>
+
+        <!-- H2 database support - upgraded to fix CVE-2022-45868 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>2.2.224</version>
             <scope>runtime</scope>
         </dependency>
 
