--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -100,7 +100,7 @@
 
         <commons.collections4.version>4.4</commons.collections4.version>
         <commons.io.version>2.6</commons.io.version>
-        <commons.lang.version>2.6</commons.lang.version>
+        <commons.lang.version>20030203.000129</commons.lang.version>
         <commons.math.version>3.6.1</commons.math.version>
         <commons-codec.version>20041127.091804</commons-codec.version>
 
@@ -291,7 +291,7 @@
         <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
-            <version>5.7.0</version>
+            <version>5.12.0</version>
         </dependency>
 
         <!-- toxic libs dependencies -->
@@ -512,6 +512,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.7.7</version>
             <scope>test</scope>
         </dependency>
 
